added validation and button disabled binding to prevent blank entries. updated toaster text and grid sort order. added text to Members tab Files modified - [Forms.variables.json,ViewProject.html,ViewProject.variables.json,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -276,7 +276,7 @@
                                                         <wm-grid-action key="customButton" display-name="Invite User" show="bind:Variables.svUserPermissions.dataSet.canEdit" class="btn-secondary" iconclass="wi wi-plus" title="Invite User" shortcutkey="" disabled="false"></wm-grid-action>
                                                         <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.svUserPermissions.dataSet.canEdit" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
-                                                    <wm-liveform novalidate="false" errormessage="That user has already been added as a Form Contact." title="Share With User" formlayout="dialog" iconclass="wi wi-share" dataset="bind:Variables.SharedWithData.dataSet" captionalign="left" captionposition="top"
+                                                    <wm-liveform novalidate="false" errormessage="This form has already been shared with that user." title="Share With User" formlayout="dialog" iconclass="wi wi-share" dataset="bind:Variables.SharedWithData.dataSet" captionalign="left" captionposition="top"
                                                     name="liveformSharedwith">
                                                         <wm-layoutgrid columns="1" name="layoutgrid4">
                                                             <wm-gridrow name="gridrow12">
