--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -54,7 +54,7 @@
                             <wm-layoutgrid height="100%" name="layoutgrid8">
                                 <wm-gridrow height="100%" name="gridrow11_2">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="2.5em unset unset unset" class="col-xs-3" name="gridcolumn24_2">
-                                        <wm-icon iconsize="3em" iconclass="wi wi-assignment" name="icon7"></wm-icon>
+                                        <wm-icon iconsize="3em" iconclass="wi wi-find-in-page" name="icon7"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn25_2">
                                         <wm-label caption="Manage Inspections" class="p" fontsize="1.5" fontunit="em" name="label13"></wm-label>
