updated +Add User/Admin button disabled binding to prevent blank records Files modified - [CompanyUsers.html]

--- a/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
+++ b/src/main/webapp/pages/CompanyUsers/CompanyUsers.html
@@ -73,7 +73,7 @@
     <wm-view class="dialog-view" name="viewAdd">
         <wm-dialog dialogtype="design-dialog" modal="true" title="Add Company User" iconclass="wi wi-person-add" name="dialogAddUser">
             <wm-dialogactions name="dialogactionsAdd">
-                <wm-button class="btn-primary" caption="Add User" name="buttonAdd" on-click="Variables.AddUsersToCompany.invoke()" iconclass="wi wi-plus" disabled="bind:Widgets.searchUser.datavalue == null"></wm-button>
+                <wm-button class="btn-primary" caption="Add User" name="buttonAdd" on-click="Variables.AddUsersToCompany.invoke()" iconclass="wi wi-plus" disabled="bind:!Widgets.searchUser.datavalue"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button7" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
             <wm-layoutgrid name="layoutgrid3">
@@ -153,7 +153,7 @@
     <wm-view class="dialog-view" name="viewAddAdmin">
         <wm-dialog dialogtype="design-dialog" modal="true" title="Add Company Admin" iconclass="wi wi-person-add" name="dialogAddAdmin">
             <wm-dialogactions name="dialogactions3">
-                <wm-button class="btn-primary" caption="Add Admin" name="buttonSaveAdmin" on-click="buttonSaveAdminClick($event, $scope)" iconclass="wi wi-plus" disabled="bind:Widgets.searchForAdmin.datavalue == null"></wm-button>
+                <wm-button class="btn-primary" caption="Add Admin" name="buttonSaveAdmin" on-click="buttonSaveAdminClick($event, $scope)" iconclass="wi wi-plus" disabled="bind:!Widgets.searchForAdmin.datavalue"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button7_2" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
             <wm-layoutgrid name="layoutgrid6">
