added "Transaction History" panel Files modified - [EditGISRecord.html]

--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -194,9 +194,9 @@
                         </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow21" padding="unset unset 1em unset">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn41">
-                        <wm-panel iconclass="wi wi-attach-file" autoclose="outsideClick" name="panelDocs" title="Documents" class="panel-primary"></wm-panel>
+                <wm-gridrow name="gridrow22" padding="unset unset 1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn42">
+                        <wm-panel iconclass="wi wi-attach-money" autoclose="outsideClick" name="panelHistory" class="panel-primary" title="Transaction History"></wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10" padding="unset unset 1em unset">
@@ -233,6 +233,11 @@
                                 </wm-gridrow>
                             </wm-layoutgrid>
                         </wm-panel>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow21" padding="unset unset 1em unset">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn41">
+                        <wm-panel iconclass="wi wi-attach-file" autoclose="outsideClick" name="panelDocs" title="Documents" class="panel-primary"></wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
